--- a/Thymeleaf/mudi/pom.xml
+++ b/Thymeleaf/mudi/pom.xml
@@ -19,6 +19,12 @@
 	</properties>
 
 	<dependencies>
+	<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>5.1.8</version>
+</dependency>
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
